--- a/Index.html
+++ b/Index.html
@@ -15,49 +15,57 @@
   </head>
   <body>
     <header class="sticky-top">
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark py-3 bg-white " id="navbar">
-          <div class="container">
-            <a class="navbar-brand" href="#">
-              <img
-                src="https://tayoex.com.au/assets/img/Tayo_Logo_Transparent_V1.0.png"
-                class="logo"
-                alt=""
-              />
-            </a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#collapsibleNavbar"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link px-3 text-success" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link px-3 text-success" href="#about-us">About</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link px-3 text-success" href="#services">Services</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link px-3 text-success" href="#"
-                    >Privacy Policy</a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link px-3 btn btn-success text-white" href="#contact-us">
-                    Contact Us
-                  </a>
-                </li>
-              </ul>
-            </div>
+      <nav
+        class="navbar navbar-expand-sm bg-dark navbar-dark py-3 bg-white"
+        id="navbar"
+      >
+        <div class="container">
+          <a class="navbar-brand" href="#">
+            <img
+              src="https://tayoex.com.au/assets/img/Tayo_Logo_Transparent_V1.0.png"
+              class="logo"
+              alt=""
+            />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#collapsibleNavbar"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link px-3 text-success" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link px-3 text-success" href="#about-us">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link px-3 text-success" href="#services"
+                  >Services</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link px-3 text-success" href="#"
+                  >Privacy Policy</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link px-3 btn btn-success text-white"
+                  href="#contact-us"
+                >
+                  Contact Us
+                </a>
+              </li>
+            </ul>
           </div>
-        </nav>
-      </header>
+        </div>
+      </nav>
+    </header>
     <main>
       <section class="container pb-5 mb-5 px-3">
         <div class="row">
@@ -140,7 +148,6 @@
             </div>
           </div>
         </div>
-        
       </section>
       <section
         class="container pb-5 mb-5 px-5"
